mongodb instead of jdbc